src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_table_inspect_zero_values.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
                                                                                                              
             ╭ 📋  Table Details  [j/k] scroll  [y] copy name  [Esc] close  ────────────────────╮              
             │                                                                                 │              
             │  Table Info ────────────────────────────────────────                            │              
             │  Schema:        public     Table: empty_table                                   │              
             │                                                                                 │              
             │  Size ────────────────────────────────────────                                  │              
             │  Total:         0 B                                                             │              
             │  Table:         0 B       Indexes: 0 B                                          │              
             │                                                                                 │              
             │  Row Stats ────────────────────────────────────────                             │              
             │  Live:          0         Dead: 0 (0.0%)                                        │              
             │                                                                                 │              
             │  Scan Activity ────────────────────────────────────────                         │              
             │  Seq Scans:     0         Rows Read: 0                                          │              
             │  Idx Scans:     0         Rows Fetch: 0                                         │              
             │                                                                                 │              
             │  DML Activity ────────────────────────────────────────                          │              
             │  Inserts:       0         Updates: 0         Deletes: 0                         │              
             │  HOT Updates:   0 (0%)                                                          │              
             │                                                                                 │              
             │  Maintenance ────────────────────────────────────────                           │              
             │  Last Vacuum:   -                                                               │              
             │  Last AutoVac:  -                                                               │              
             │  Last Analyze:  -                                                               │              
             │  Last AutoAnly: -                                                               │              
             │  Vacuum Count:  0         AutoVac: 0                                            │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             │                                                                                 │              
             ╰─────────────────────────────────────────────────────────────────────────────────╯
