src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_wraparound_inspect.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
               ╭ ⚠️  XID Details  [j/k] scroll  [y] copy db  [Esc] close ────────────╮               
               │                                                                    │               
               │  Database ────────────────────────────────────────                 │               
               │  Name:          production     Status:  OK                         │               
               │                                                                    │               
               │  Transaction ID Age ────────────────────────────────────────       │               
               │  XID Age:       150.0M transactions                                │               
               │  Remaining:     2.0B until wraparound                              │               
               │                                                                    │               
               │  [██░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░] 7.0%                   │               
               │                                                                    │               
               │  What This Means ────────────────────────────────────────          │               
               │  PostgreSQL uses 32-bit transaction IDs that wrap around after     │               
               │  ~2 billion transactions. VACUUM must run to freeze old rows       │               
               │  before wraparound occurs, or the database will shut down.         │               
               │                                                                    │               
               │  ✓ Transaction ID age is healthy                                   │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               ╰────────────────────────────────────────────────────────────────────╯
